# Boost.Application

./: .gitignore  .travis.yml  CMakeLists.txt  Jamfile.v2  Jamroot  README.md  boost-build.jam  conan.cmake  index.html  params.json  standalone_HTML.manifest
boost/: application.hpp
boost_application/: bibliography.html  customization.html  dependencies.html  design_overview.html  examples.html  f_a_q_.html  handling_errors.html  reference.html  revision_history.html  roadmap.html  supported_compilers_and_platforms.html  tutorial.html  using_application_handlers.html  windows_specifics.html
doc/: Jamfile.jam  Thumbs.db  acknowledgements.qbk  app.ai  application.qbk  apptypes.qbk  aspects.qbk  bibliography.qbk  context.qbk  customization.qbk  dependencies.qbk  designoverview.qbk  examples.qbk  faq.qbk  handlingerrors.qbk  introduction.qbk  otherfeatures.qbk  platforms.qbk  posixspecifics.qbk  reference.qbk  revisionhistory.qbk  roadmap.qbk  todo.qbk  tutorial.qbk  useaspecthandler.qbk  win_buid_utility.cmd  windowsspecifics.qbk
example/: Jamfile.v2  application_mode_select.cpp  handling_errors_ec_version.cpp  handling_errors_ex_version.cpp  limit_single_instance.cpp  limit_single_instance_boost_interprocess_named_mutex.cpp  limit_single_instance_callback.cpp  limit_single_instance_callback_using_singularity.cpp  limit_single_instance_callback_with_global_context.cpp  my_own_termination_handler.cpp  my_own_wait_for_termination_request.cpp  myexception.cpp  path.cpp  pid.cpp  plugin_library.cpp  service_setup.cpp  shared_library_load_plugin.cpp  simple_application.cpp  (+11 more)
(+425 files in other folders)
